# elytra-bridge

./: .gitignore  .gitmodules  README.md
application/: package-lock.json  package.json
application/backend/: .env.example  package.json
application/backend/src/: config.js  folderPicker.js  missionValidation.js  projectStore.js  recentProjectsStore.js  rosViewBridge.js  server.js  sessionStore.js  shell.js  simTarget.js  sshTarget.js  viewConfig.js
application/backend/test/: movementMode.test.js  simViews.test.js  stopScriptPath.test.js  teleopStep.test.js
application/frontend/: index.html  package.json
application/frontend/src/: App.jsx  SimulationDashboard.jsx  api.js  simViewUtils.js  styles.css
docs/: architecture-roadmap.md  project-folder-contract.md
projects/: README.md
projects/drone-2026/: README.md  project.yaml
projects/drone-2026/ros_workspace/src/uav_msgs/: CMakeLists.txt  package.xml
projects/drone-2026/ros_workspace/src/uav_msgs/action/: MoveCamera.action  OffboardLand.action  OffboardTakeoff.action  ReturnToHome.action  RunWaypointMission.action  StartDetection.action  StartMapping.action  StartObjectLocalization.action  StartPackageDelivery.action  StartPackageRecovery.action  StartPayloadDrop.action  StartTimeTrial.action
projects/drone-2026/ros_workspace/src/uav_msgs/msg/: Detection.msg  DetectionArray.msg  GeoReferencedImage.msg  GimbalStatus.msg  MissionStatus.msg
scripts/: ensure-single-instance.js
scripts/run-elytra-bridge-ui/: README.md  run-elytra-bridge-ui.bat  run-elytra-bridge-ui.ps1  run-elytra-bridge-ui.sh
(+115 files in other folders)
